[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/FCTMgr.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ships/Enemy/Enemy.gd" type="Script" id=3]
[ext_resource path="res://UI/HUD/HealthBar.gd" type="Script" id=4]
[ext_resource path="res://Resources/Images/Ships/Spaceship2.png" type="Texture2D" id=5]

[sub_resource type="Gradient" id=1]
colors = PackedColorArray( 0.501961, 0.501961, 0.501961, 1, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=2]
colors = PackedColorArray( 0.501961, 0.501961, 0.501961, 1, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=3]
colors = PackedColorArray( 0.501961, 0.501961, 0.501961, 1, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=4]
colors = PackedColorArray( 0.501961, 0.501961, 0.501961, 1, 1, 1, 1, 1 )

[sub_resource type="Gradient" id=5]
colors = PackedColorArray( 0.121547, 0.121547, 0.121547, 1, 0.9272, 0.9272, 0.9272, 1 )

[node name="EnemyShip" type="Node2D"]

[node name="Ship" type="RigidBody2D" parent="." groups=["ENEMIES"]]
collision_layer = 16
collision_mask = 7
mass = 5.0
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
angular_damp = 2.0
script = ExtResource( 3 )

[node name="Sprite2D" type="Sprite2D" parent="Ship"]
z_index = 1
texture = ExtResource( 5 )

[node name="LW" type="Marker2D" parent="Ship"]
position = Vector2( -9, -11 )

[node name="RW" type="Marker2D" parent="Ship"]
position = Vector2( 9, -11 )

[node name="L" type="Marker2D" parent="Ship"]
position = Vector2( -16, 10 )

[node name="RearThruster" type="CPUParticles2D" parent="Ship/L"]
emitting = false
lifetime = 0.05
local_coords = false
direction = Vector2( 0, 1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = SubResource( 1 )
hue_variation = 0.3
hue_variation_random = 0.5

[node name="FrontThruster" type="CPUParticles2D" parent="Ship/L"]
position = Vector2( 0, -10 )
emitting = false
lifetime = 0.03
local_coords = false
direction = Vector2( 0, -1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = SubResource( 2 )
hue_variation = 0.3
hue_variation_random = 0.5

[node name="R" type="Marker2D" parent="Ship"]
position = Vector2( 16, 10 )

[node name="RearThruster" type="CPUParticles2D" parent="Ship/R"]
emitting = false
lifetime = 0.05
local_coords = false
direction = Vector2( 0, 1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = SubResource( 3 )
hue_variation = 0.3
hue_variation_random = 0.5

[node name="FrontThruster" type="CPUParticles2D" parent="Ship/R"]
position = Vector2( 0, -10 )
emitting = false
lifetime = 0.03
local_coords = false
direction = Vector2( 0, -1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = SubResource( 4 )
hue_variation = 0.3
hue_variation_random = 0.5

[node name="MainThruster" type="CPUParticles2D" parent="Ship"]
position = Vector2( 0, 16 )
amount = 32
lifetime = 0.08
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( 0, 1 )
spread = 5.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = SubResource( 5 )
hue_variation = 0.3
hue_variation_random = 0.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ship"]
polygon = PackedVector2Array( 2, -17, 3, -17, 3, -15, 4, -15, 4, -13, 5, -13, 5, -10, 6, -10, 6, -7, 9, -7, 9, -5, 8, -5, 8, -4, 7, -4, 7, -3, 6, -3, 6, -1, 5, -1, 5, 0, 4, 0, 4, 2, 5, 2, 5, 1, 6, 1, 6, 0, 7, 0, 7, -1, 8, -1, 8, -2, 9, -2, 9, 3, 10, 3, 10, 2, 13, 2, 13, 3, 14, 3, 14, -2, 15, -2, 15, -1, 16, -1, 16, -2, 17, -2, 17, 1, 18, 1, 18, 0, 19, 0, 19, -7, 21, -7, 21, -6, 22, -6, 22, -3, 23, -3, 23, 3, 22, 3, 22, 6, 21, 6, 21, 8, 20, 8, 20, 10, 19, 10, 19, 11, 18, 11, 18, 12, 17, 12, 17, 13, 16, 13, 16, 14, 14, 14, 14, 15, 13, 15, 13, 16, 10, 16, 10, 15, 7, 15, 7, 14, 4, 14, 4, 16, 2, 16, 2, 17, -2, 17, -2, 16, -4, 16, -4, 14, -7, 14, -7, 15, -10, 15, -10, 16, -13, 16, -13, 15, -14, 15, -14, 14, -16, 14, -16, 13, -17, 13, -17, 12, -18, 12, -18, 11, -19, 11, -19, 10, -20, 10, -20, 8, -21, 8, -21, 6, -22, 6, -22, 3, -23, 3, -23, -3, -22, -3, -22, -6, -21, -6, -21, -7, -19, -7, -19, 0, -18, 0, -18, 1, -17, 1, -17, -2, -16, -2, -16, -1, -15, -1, -15, -2, -14, -2, -14, 3, -13, 3, -13, 2, -10, 2, -10, 3, -9, 3, -9, -2, -8, -2, -8, -1, -7, -1, -7, 0, -6, 0, -6, 1, -5, 1, -5, 2, -4, 2, -4, 0, -5, 0, -5, -1, -6, -1, -6, -3, -7, -3, -7, -4, -8, -4, -8, -5, -9, -5, -9, -7, -6, -7, -6, -10, -5, -10, -5, -13, -4, -13, -4, -15, -3, -15, -3, -17, -2, -17, -2, -18, 2, -18 )

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Ship"]
rect = Rect2( -5, -5, 10, 10 )

[node name="FCTMgr" parent="." instance=ExtResource( 1 )]
spread = 1.5708

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Health" type="ColorRect" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 84.0
offset_bottom = 19.0
color = Color( 0, 0, 0, 0.627451 )
script = ExtResource( 4 )

[node name="Bar" type="ColorRect" parent="CanvasLayer/Health"]
offset_left = -41.0
offset_top = -43.0
offset_right = 31.0
offset_bottom = -36.0
color = Color( 1, 0.196078, 0.196078, 1 )

[connection signal="body_entered" from="Ship" to="Ship" method="_on_Ship_body_entered"]
[connection signal="screen_entered" from="Ship/VisibleOnScreenNotifier2D" to="Ship" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="Ship/VisibleOnScreenNotifier2D" to="Ship" method="_on_VisibilityNotifier2D_screen_exited"]
